--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,3 @@
 body {
-	background-color: #eaf6f6;
-}
-
-hr {
-	border-style: none;
-	border-top-style: dotted;
-	border-color: grey;
-	border-width: 5px;
-	width: 5%;
-}
-
-h2,
-h3 {
-	color: #66bfbf;
+   background-color: blue;
 }
