--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,34 @@
 body {
 	margin: 0;
+	text-align: center; /*Will center all block elements with no width */
+	font-family: "Merriweather", serif;
 }
 
 h1 {
-	margin-top: 0;
+	/* If width, we can center using margin auto to fill the remaining spaces inline */
+	margin: 0 auto;
+	font-family: "Sacramento", cursive;
 }
- 
-div {
+
+h2,
+h3 {
+	font-family: "Montserrat", sans-serif;
+}
+
+.top-container {
 	background-color: #e4f9f5;
+	position: relative;
+	padding-top: 100px;
+}
+
+.top-cloud {
+	position: absolute;
+	right: 300px;
+	top: 50px;
+}
+
+.bottom-cloud {
+	position: absolute;
+	left: 300px;
+	bottom: 300px;
 }
