--- a/css/styles.css
+++ b/css/styles.css
@@ -6,19 +6,34 @@ body {
 
 h1 {
 	/* If width, we can center using margin auto to fill the remaining spaces inline */
-	margin: 0 auto;
+	margin: 50px auto 0;
 	font-family: "Sacramento", cursive;
+	font-size: 5.625rem; /*100% == 1em == 16px, 90px = 562.2% = 5.625rem*/
 }
 
-h2,
+h2 {
+	font-size: 2.5rem;
+	font-family: "Montserrat", sans-serif;
+}
+
 h3 {
 	font-family: "Montserrat", sans-serif;
+}
+
+.pro {
+	text-decoration: underline;
 }
 
 .top-container {
 	background-color: #e4f9f5;
 	position: relative;
 	padding-top: 100px;
+}
+
+.middle-container {
+}
+
+.bottom-container {
 }
 
 .top-cloud {
