--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,27 @@ h1 {
 	/* If width, we can center using margin auto to fill the remaining spaces inline */
 	margin: 50px auto 0;
 	font-family: "Sacramento", cursive;
-	font-size: 5.625rem; /*100% == 1em == 16px, 90px = 562.2% = 5.625rem*/
+	font-size: 5.625rem; /*100% == 1rem == 16px, 90px = 562.2% = 5.625rem*/
 }
 
 h2 {
 	font-size: 2.5rem;
+	font-weight: normal;
+}
+
+h1,
+h2 {
+	color: #66bfbf;
+}
+
+h2,
+h3 {
 	font-family: "Montserrat", sans-serif;
 }
 
-h3 {
-	font-family: "Montserrat", sans-serif;
+h3,
+a {
+	color: #11999e;
 }
 
 .pro {
