--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	text-align: center; /*Will center all block elements with no width */
 	font-family: "Merriweather", serif;
+	color: #40514e;
 }
 
 h1 {
@@ -14,6 +15,7 @@ h1 {
 h2 {
 	font-size: 2.5rem;
 	font-weight: normal;
+	padding-bottom: 10px;
 }
 
 h1,
@@ -31,8 +33,26 @@ a {
 	color: #11999e;
 }
 
-.pro {
-	text-decoration: underline;
+p {
+	line-height: 2;
+}
+
+hr {
+	border: dotted #eaf6f6 6px;
+	border-bottom: none;
+	width: 4%;
+	margin: 100px auto;
+}
+
+a {
+	color: #11999e;
+	font-family: "Montserrat", sans-serif;
+	margin: 10px 20px;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #eaf6f6;
 }
 
 .top-container {
@@ -42,16 +62,18 @@ a {
 }
 
 .middle-container {
+	margin: 100px 0;
 }
 
 .bottom-container {
+	background-color: #66bfbf;
+	padding: 50px 0 20px;
 }
 
 .skill-row {
 	width: 50%;
 	margin: 100px auto;
 	text-align: left;
-	line-height: 2;
 }
 
 .skill-row .skill-img1 {
@@ -74,14 +96,60 @@ a {
 	clear: right;
 } */
 
+.pro {
+	text-decoration: underline;
+}
+
+.intro {
+	width: 30%;
+	margin: auto;
+}
+
+.contact-message {
+	width: 40%;
+	margin: 40px auto 60px;
+}
 .top-cloud {
 	position: absolute;
 	right: 300px;
-	top: 50px;
+	top: 40px;
+}
+
+.copyright {
+	color: #eaf6f6;
+	font-size: 0.75rem;
+	padding: 20px 0;
 }
 
 .bottom-cloud {
 	position: absolute;
-	left: 300px;
+	left: 250px;
 	bottom: 300px;
+}
+
+.btn {
+	background: #11cdd4;
+	background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+	background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+	background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+	background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+	background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+	-webkit-border-radius: 8;
+	-moz-border-radius: 8;
+	border-radius: 8px;
+	font-family: "Montserrat", sans-serif;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	text-decoration: none;
+}
+
+.btn:hover {
+	background: #30e3cb;
+	background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+	background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+	background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+	background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+	background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+	text-decoration: none;
 }
